Fixed weird overflow-x bug with pkdecks

--- a/public/css/desktop.css
+++ b/public/css/desktop.css
@@ -387,6 +387,7 @@ body {
   width: 100%; 
   height: 100%; 
   
+  overflow-x: hidden; 
   overflow-y: scroll; 
   scrollbar-width: thin;
   scrollbar-color: rgb(240, 240, 240) rgba(0, 0, 0, 0.3);
